--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+wheel~=0.34.2
 Flask~=1.1.2
+SQLAlchemy~=1.3.17
+alembic~=1.4.2
+psycopg2~=2.8.5
+Flask-Migrate~=2.5.3
+Flask-SQLAlchemy~=2.4.1
+Flask-Script~=2.0.6
